feat: переписал проект на spring boot, добавил swagger и свой стартер